--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.2.17
+  shared_preferences: ^2.2.2
   http: ^0.13.5
   carousel_slider: ^4.2.1
   cached_network_image: ^3.2.3
